--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "@types/bcryptjs": "^2.4.3",
+    "@types/validator": "^13.11.1",
     "apollo-server": "^3.12.1",
+    "bcryptjs": "^2.4.3",
     "graphql": "^16.8.0",
-    "prisma": "^5.2.0"
+    "prisma": "^5.2.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
