--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "@types/bcryptjs": "^2.4.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/validator": "^13.11.1",
     "apollo-server": "^3.12.1",
     "bcryptjs": "^2.4.3",
     "graphql": "^16.8.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.2.0",
     "validator": "^13.11.0"
   },
