--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon --watch './**/*.ts' -e ts --exec 'npx ts-node-dev ./src/index.ts'"
+    "start:dev": "nodemon --watch './**/*.ts' -e ts --exec 'npx ts-node-dev ./src/main.ts'"
   },
   "keywords": [],
   "author": "",
